src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis VIRGULA var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ABRE_COL expressao FECHA_COL
Rule 14    indice -> ABRE_COL expressao FECHA_COL
Rule 15    indice -> ABRE_COL error
Rule 16    indice -> error FECHA_COL
Rule 17    indice -> ABRE_COL error FECHA_COL
Rule 18    indice -> indice ABRE_COL error
Rule 19    indice -> indice error FECHA_COL
Rule 20    indice -> indice ABRE_COL error FECHA_COL
Rule 21    tipo -> INTEIRO
Rule 22    tipo -> FLUTUANTE
Rule 23    declaracao_funcao -> tipo cabecalho
Rule 24    declaracao_funcao -> cabecalho
Rule 25    cabecalho -> ID error lista_parametros FECHA_PAR corpo FIM
Rule 26    cabecalho -> ID ABRE_PAR lista_parametros error corpo FIM
Rule 27    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo
Rule 28    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 29    lista_parametros -> lista_parametros VIRGULA parametro
Rule 30    lista_parametros -> parametro
Rule 31    lista_parametros -> vazio
Rule 32    parametro -> tipo DOIS_PONTOS ID
Rule 33    parametro -> parametro ABRE_COL FECHA_COL
Rule 34    parametro -> tipo error ID
Rule 35    parametro -> error ID
Rule 36    parametro -> parametro error FECHA_COL
Rule 37    parametro -> parametro ABRE_COL error
Rule 38    corpo -> corpo acao
Rule 39    corpo -> vazio
Rule 40    acao -> expressao
Rule 41    acao -> declaracao_variaveis
Rule 42    acao -> se
Rule 43    acao -> repita
Rule 44    acao -> leia
Rule 45    acao -> escreva
Rule 46    acao -> retorna
Rule 47    se -> error expressao ENTAO corpo FIM
Rule 48    se -> SE expressao error corpo FIM
Rule 49    se -> error expressao ENTAO corpo SENAO corpo FIM
Rule 50    se -> SE expressao error corpo SENAO corpo FIM
Rule 51    se -> SE expressao ENTAO corpo error corpo FIM
Rule 52    se -> SE expressao ENTAO corpo SENAO corpo
Rule 53    se -> SE expressao ENTAO corpo FIM
Rule 54    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 55    repita -> REPITA corpo ATE expressao
Rule 56    repita -> error corpo ATE expressao
Rule 57    repita -> REPITA corpo error expressao
Rule 58    atribuicao -> var ATRIBUICAO expressao
Rule 59    leia -> LEIA ABRE_PAR var FECHA_PAR
Rule 60    leia -> LEIA ABRE_PAR error FECHA_PAR
Rule 61    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 62    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 63    expressao -> expressao_logica
Rule 64    expressao -> atribuicao
Rule 65    expressao_logica -> expressao_simples
Rule 66    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 67    expressao_simples -> expressao_aditiva
Rule 68    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 69    expressao_aditiva -> expressao_multiplicativa
Rule 70    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 71    expressao_multiplicativa -> expressao_unaria
Rule 72    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 73    expressao_unaria -> fator
Rule 74    expressao_unaria -> operador_soma fator
Rule 75    expressao_unaria -> operador_negacao fator
Rule 76    operador_relacional -> MENOR
Rule 77    operador_relacional -> MAIOR
Rule 78    operador_relacional -> IGUALDADE
Rule 79    operador_relacional -> DIFERENCA
Rule 80    operador_relacional -> MENOR_IGUAL
Rule 81    operador_relacional -> MAIOR_IGUAL
Rule 82    operador_soma -> ADICAO
Rule 83    operador_soma -> SUBTRACAO
Rule 84    operador_logico -> E_LOGICO
Rule 85    operador_logico -> OU_LOGICO
Rule 86    operador_negacao -> NEGACAO
Rule 87    operador_multiplicacao -> MULTIPLICACAO
Rule 88    operador_multiplicacao -> DIVISAO
Rule 89    fator -> ABRE_PAR expressao FECHA_PAR
Rule 90    fator -> var
Rule 91    fator -> chamada_funcao
Rule 92    fator -> numero
Rule 93    fator -> ABRE_PAR expressao
Rule 94    numero -> NUM_INTEIRO
Rule 95    numero -> NUM_PONTO_FLUTUANTE
Rule 96    numero -> NUM_NOTACAO_CIENTIFICA
Rule 97    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 98    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 99    lista_argumentos -> expressao
Rule 100   lista_argumentos -> vazio
Rule 101   vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 13 14 15 17 18 20 33 37
ABRE_PAR             : 26 27 28 59 60 61 62 89 93 97
ADICAO               : 82
ATE                  : 55 56
ATRIBUICAO           : 58
DIFERENCA            : 79
DIVISAO              : 88
DOIS_PONTOS          : 7 32
ENTAO                : 47 49 51 52 53 54
ESCREVA              : 61
E_LOGICO             : 84
FECHA_COL            : 13 14 16 17 19 20 33 36
FECHA_PAR            : 25 27 28 59 60 61 62 89 97
FIM                  : 25 26 28 47 48 49 50 51 53 54
FLUTUANTE            : 22
ID                   : 11 12 25 26 27 28 32 34 35 97
IGUALDADE            : 78
INTEIRO              : 21
LEIA                 : 59 60
MAIOR                : 77
MAIOR_IGUAL          : 81
MENOR                : 76
MENOR_IGUAL          : 80
MULTIPLICACAO        : 87
NEGACAO              : 86
NUM_INTEIRO          : 94
NUM_NOTACAO_CIENTIFICA : 96
NUM_PONTO_FLUTUANTE  : 95
OU_LOGICO            : 85
REPITA               : 55 57
RETORNA              : 62
SE                   : 48 50 51 52 53 54
SENAO                : 49 50 52 54
SUBTRACAO            : 83
VIRGULA              : 9 29 98
error                : 15 16 17 18 19 20 25 26 34 35 36 37 47 48 49 50 51 56 57 60

Nonterminals, with rules where they appear

acao                 : 38
atribuicao           : 8 64
cabecalho            : 23 24
chamada_funcao       : 91
corpo                : 25 26 27 28 38 47 48 49 49 50 50 51 51 52 52 53 54 54 55 56 57
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 41
escreva              : 45
expressao            : 13 14 40 47 48 49 50 51 52 53 54 55 56 57 58 61 62 89 93 98 99
expressao_aditiva    : 67 68 70
expressao_logica     : 63 66
expressao_multiplicativa : 69 70 72
expressao_simples    : 65 66 68
expressao_unaria     : 71 72
fator                : 73 74 75
indice               : 12 13 18 19 20
inicializacao_variaveis : 5
leia                 : 44
lista_argumentos     : 97 98
lista_declaracoes    : 1 2
lista_parametros     : 25 26 27 28 29
lista_variaveis      : 7 9
numero               : 92
operador_logico      : 66
operador_multiplicacao : 72
operador_negacao     : 75
operador_relacional  : 68
operador_soma        : 70 74
parametro            : 29 30 33 36 37
programa             : 0
repita               : 43
retorna              : 46
se                   : 42
tipo                 : 7 23 32 34
var                  : 9 10 58 59 90
vazio                : 31 39 100

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (23) declaracao_funcao -> . tipo cabecalho
    (24) declaracao_funcao -> . cabecalho
    (21) tipo -> . INTEIRO
    (22) tipo -> . FLUTUANTE
    (58) atribuicao -> . var ATRIBUICAO expressao
    (25) cabecalho -> . ID error lista_parametros FECHA_PAR corpo FIM
    (26) cabecalho -> . ID ABRE_PAR lista_parametros error corpo FIM
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (23) declaracao_funcao -> . tipo cabecalho
    (24) declaracao_funcao -> . cabecalho
    (21) tipo -> . INTEIRO
    (22) tipo -> . FLUTUANTE
    (58) atribuicao -> . var ATRIBUICAO expressao
    (25) cabecalho -> . ID error lista_parametros FECHA_PAR corpo FIM
    (26) cabecalho -> . ID ABRE_PAR lista_parametros error corpo FIM
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (23) declaracao_funcao -> tipo . cabecalho
    (25) cabecalho -> . ID error lista_parametros FECHA_PAR corpo FIM
    (26) cabecalho -> . ID ABRE_PAR lista_parametros error corpo FIM
    (27) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo
    (28) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 15
    ID              shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (24) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 24 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 24 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 24 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 24 (declaracao_funcao -> cabecalho .)


state 10

    (21) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 21 (tipo -> INTEIRO .)
    ID              reduce using rule 21 (tipo -> INTEIRO .)
    error           reduce using rule 21 (tipo -> INTEIRO .)


state 11

    (22) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 22 (tipo -> FLUTUANTE .)
    ID              reduce using rule 22 (tipo -> FLUTUANTE .)
    error           reduce using rule 22 (tipo -> FLUTUANTE .)


state 12

    (58) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (25) cabecalho -> ID . error lista_parametros FECHA_PAR corpo FIM
    (26) cabecalho -> ID . ABRE_PAR lista_parametros error corpo FIM
    (27) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo
    (28) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COL expressao FECHA_COL
    (14) indice -> . ABRE_COL expressao FECHA_COL
    (15) indice -> . ABRE_COL error
    (16) indice -> . error FECHA_COL
    (17) indice -> . ABRE_COL error FECHA_COL
    (18) indice -> . indice ABRE_COL error
    (19) indice -> . indice error FECHA_COL
    (20) indice -> . indice ABRE_COL error FECHA_COL

    error           shift and go to state 19
    ABRE_PAR        shift and go to state 20
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ABRE_COL        shift and go to state 22

    indice                         shift and go to state 21

state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis VIRGULA var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 25

    lista_variaveis                shift and go to state 23
    var                            shift and go to state 24

state 16

    (23) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 23 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 23 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 23 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 23 (declaracao_funcao -> tipo cabecalho .)


state 17

    (25) cabecalho -> ID . error lista_parametros FECHA_PAR corpo FIM
    (26) cabecalho -> ID . ABRE_PAR lista_parametros error corpo FIM
    (27) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo
    (28) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    error           shift and go to state 26
    ABRE_PAR        shift and go to state 20


state 18

    (58) atribuicao -> var ATRIBUICAO . expressao
    (63) expressao -> . expressao_logica
    (64) expressao -> . atribuicao
    (65) expressao_logica -> . expressao_simples
    (66) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (58) atribuicao -> . var ATRIBUICAO expressao
    (67) expressao_simples -> . expressao_aditiva
    (68) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (69) expressao_aditiva -> . expressao_multiplicativa
    (70) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (71) expressao_multiplicativa -> . expressao_unaria
    (72) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (73) expressao_unaria -> . fator
    (74) expressao_unaria -> . operador_soma fator
    (75) expressao_unaria -> . operador_negacao fator
    (89) fator -> . ABRE_PAR expressao FECHA_PAR
    (90) fator -> . var
    (91) fator -> . chamada_funcao
    (92) fator -> . numero
    (93) fator -> . ABRE_PAR expressao
    (82) operador_soma -> . ADICAO
    (83) operador_soma -> . SUBTRACAO
    (86) operador_negacao -> . NEGACAO
    (97) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (94) numero -> . NUM_INTEIRO
    (95) numero -> . NUM_PONTO_FLUTUANTE
    (96) numero -> . NUM_NOTACAO_CIENTIFICA

    ID              shift and go to state 33
    ABRE_PAR        shift and go to state 39
    ADICAO          shift and go to state 42
    SUBTRACAO       shift and go to state 43
    NEGACAO         shift and go to state 44
    NUM_INTEIRO     shift and go to state 45
    NUM_PONTO_FLUTUANTE shift and go to state 46
    NUM_NOTACAO_CIENTIFICA shift and go to state 47

    var                            shift and go to state 27
    expressao                      shift and go to state 28
    expressao_logica               shift and go to state 29
    atribuicao                     shift and go to state 30
    expressao_simples              shift and go to state 31
    expressao_aditiva              shift and go to state 32
    expressao_multiplicativa       shift and go to state 34
    operador_soma                  shift and go to state 35
    expressao_unaria               shift and go to state 36
    fator                          shift and go to state 37
    operador_negacao               shift and go to state 38
    chamada_funcao                 shift and go to state 40
    numero                         shift and go to state 41

state 19

    (25) cabecalho -> ID error . lista_parametros FECHA_PAR corpo FIM
    (16) indice -> error . FECHA_COL
    (29) lista_parametros -> . lista_parametros VIRGULA parametro
    (30) lista_parametros -> . parametro
    (31) lista_parametros -> . vazio
    (32) parametro -> . tipo DOIS_PONTOS ID
    (33) parametro -> . parametro ABRE_COL FECHA_COL
    (34) parametro -> . tipo error ID
    (35) parametro -> . error ID
    (36) parametro -> . parametro error FECHA_COL
    (37) parametro -> . parametro ABRE_COL error
    (101) vazio -> .
    (21) tipo -> . INTEIRO
    (22) tipo -> . FLUTUANTE

    FECHA_COL       shift and go to state 50
    error           shift and go to state 48
    FECHA_PAR       reduce using rule 101 (vazio -> .)
    VIRGULA         reduce using rule 101 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    lista_parametros               shift and go to state 49
    parametro                      shift and go to state 51
    vazio                          shift and go to state 52
    tipo                           shift and go to state 53

state 20

    (26) cabecalho -> ID ABRE_PAR . lista_parametros error corpo FIM
    (27) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo
    (28) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (29) lista_parametros -> . lista_parametros VIRGULA parametro
    (30) lista_parametros -> . parametro
    (31) lista_parametros -> . vazio
    (32) parametro -> . tipo DOIS_PONTOS ID
    (33) parametro -> . parametro ABRE_COL FECHA_COL
    (34) parametro -> . tipo error ID
    (35) parametro -> . error ID
    (36) parametro -> . parametro error FECHA_COL
    (37) parametro -> . parametro ABRE_COL error
    (101) vazio -> .
    (21) tipo -> . INTEIRO
    (22) tipo -> . FLUTUANTE

  ! shift/reduce conflict for error resolved as shift
    error           shift and go to state 48
    FECHA_PAR       reduce using rule 101 (vazio -> .)
    VIRGULA         reduce using rule 101 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

  ! error           [ reduce using rule 101 (vazio -> .) ]

    lista_parametros               shift and go to state 54
    parametro                      shift and go to state 51
    vazio                          shift and go to state 52
    tipo                           shift and go to state 53

state 21

    (12) var -> ID indice .
    (13) indice -> indice . ABRE_COL expressao FECHA_COL
    (18) indice -> indice . ABRE_COL error
    (19) indice -> indice . error FECHA_COL
    (20) indice -> indice . ABRE_COL error FECHA_COL

  ! shift/reduce conflict for error resolved as shift
    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    ABRE_PAR        reduce using rule 12 (var -> ID indice .)
    ADICAO          reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_PONTO_FLUTUANTE reduce using rule 12 (var -> ID indice .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 12 (var -> ID indice .)
    ATE             reduce using rule 12 (var -> ID indice .)
    SENAO           reduce using rule 12 (var -> ID indice .)
    FECHA_COL       reduce using rule 12 (var -> ID indice .)
    FECHA_PAR       reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    MENOR           reduce using rule 12 (var -> ID indice .)
    MAIOR           reduce using rule 12 (var -> ID indice .)
    IGUALDADE       reduce using rule 12 (var -> ID indice .)
    DIFERENCA       reduce using rule 12 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> ID indice .)
    E_LOGICO        reduce using rule 12 (var -> ID indice .)
    OU_LOGICO       reduce using rule 12 (var -> ID indice .)
    ENTAO           reduce using rule 12 (var -> ID indice .)
    ABRE_COL        shift and go to state 55
    error           shift and go to state 56

  ! error           [ reduce using rule 12 (var -> ID indice .) ]


state 22

    (14) indice -> ABRE_COL . expressao FECHA_COL
    (15) indice -> ABRE_COL . error
    (17) indice -> ABRE_COL . error FECHA_COL
    (63) expressao -> . expressao_logica
    (64) expressao -> . atribuicao
    (65) expressao_logica -> . expressao_simples
    (66) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (58) atribuicao -> . var ATRIBUICAO expressao
    (67) expressao_simples -> . expressao_aditiva
    (68) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (69) expressao_aditiva -> . expressao_multiplicativa
    (70) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (71) expressao_multiplicativa -> . expressao_unaria
    (72) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (73) expressao_unaria -> . fator
    (74) expressao_unaria -> . operador_soma fator
    (75) expressao_unaria -> . operador_negacao fator
    (89) fator -> . ABRE_PAR expressao FECHA_PAR
    (90) fator -> . var
    (91) fator -> . chamada_funcao
    (92) fator -> . numero
    (93) fator -> . ABRE_PAR expressao
    (82) operador_soma -> . ADICAO
    (83) operador_soma -> . SUBTRACAO
    (86) operador_negacao -> . NEGACAO
    (97) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (94) numero -> . NUM_INTEIRO
    (95) numero -> . NUM_PONTO_FLUTUANTE
    (96) numero -> . NUM_NOTACAO_CIENTIFICA

    error           shift and go to state 58
    ID              shift and go to state 33
    ABRE_PAR        shift and go to state 39
    ADICAO          shift and go to state 42
    SUBTRACAO       shift and go to state 43
    NEGACAO         shift and go to state 44
    NUM_INTEIRO     shift and go to state 45
    NUM_PONTO_FLUTUANTE shift and go to state 46
    NUM_NOTACAO_CIENTIFICA shift and go to state 47

    expressao                      shift and go to state 57
    expressao_logica               shift and go to state 29
    atribuicao                     shift and go to state 30
    expressao_simples              shift and go to state 31
    var                            shift and go to state 27
    expressao_aditiva              shift and go to state 32
    expressao_multiplicativa       shift and go to state 34
    operador_soma                  shift and go to state 35
    expressao_unaria               shift and go to state 36
    fator                          shift and go to state 37
    operador_negacao               shift and go to state 38
    chamada_funcao                 shift and go to state 40
    numero                         shift and go to state 41

state 23

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . VIRGULA var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_PAR        reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ADICAO          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NEGACAO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_INTEIRO     reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_PONTO_FLUTUANTE reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    VIRGULA         shift and go to state 59


state 24

    (10) lista_variaveis -> var .

    VIRGULA         reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    error           reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    ABRE_PAR        reduce using rule 10 (lista_variaveis -> var .)
    ADICAO          reduce using rule 10 (lista_variaveis -> var .)
    SUBTRACAO       reduce using rule 10 (lista_variaveis -> var .)
    NEGACAO         reduce using rule 10 (lista_variaveis -> var .)
    NUM_INTEIRO     reduce using rule 10 (lista_variaveis -> var .)
    NUM_PONTO_FLUTUANTE reduce using rule 10 (lista_variaveis -> var .)
    NUM_NOTACAO_CIENTIFICA reduce using rule 10 (lista_variaveis -> var .)
    ATE             reduce using rule 10 (lista_variaveis -> var .)
    SENAO           reduce using rule 10 (lista_variaveis -> var .)


state 25

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ABRE_COL expressao FECHA_COL
    (14) indice -> . ABRE_COL expressao FECHA_COL
    (15) indice -> . ABRE_COL error
    (16) indice -> . error FECHA_COL
    (17) indice -> . ABRE_COL error FECHA_COL
    (18) indice -> . indice ABRE_COL error
    (19) indice -> . indice error FECHA_COL
    (20) indice -> . indice ABRE_COL error FECHA_COL
